--- a/BookShop/Views/Home/Index.cshtml
+++ b/BookShop/Views/Home/Index.cshtml
@@ -1,8 +1,26 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@using BookShop.Areas.Identity.Data
+@using Microsoft.AspNetCore.Identity
+@{
+	ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+	<h1 class="display-4">Welcome</h1>
+	<p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+@section Footer
+{
+<div class="d-flex justify-content-between" style="align-items: center">
+	<div>
+		&copy; 2022 - Tuan&Nhan - <a asp-area="" asp-controller="Home" asp-action="Privacy">Application</a>
+	</div>
+	<div>
+		<ul class="navbar-nav align-middle">
+			<li class="nav-item">
+				<a class="nav-link text-dark fw-bold " asp-area="" asp-controller="Store" asp-action="Register">Become a seller with us</a>
+			</li>
+		</ul>
+	</div>
+</div>
+}
