--- a/BookShop/Views/Store/Index.cshtml
+++ b/BookShop/Views/Store/Index.cshtml
@@ -1,7 +1,248 @@
-﻿@{
+﻿
+@model IEnumerable<Store>
+@{
     ViewData["Title"] = "Store";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome Your Store</h1>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+    <title>Dashboard Admin</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
+    />
+    <link rel="stylesheet" href="~/css/style.css" />
+    
+  </head>
+  <body>
+
+    <input type="checkbox" name="" id="nav-toggle">
+    <!-- Start sidebar -->
+    <div class="sidebar">
+      <div class="sidebar-brand">
+        <h3><span class="lab la-accusoft"></span> <span>BookStore</span></h3>
+      </div>
+
+      <div class="sidebar-menu">
+        <ul>
+          <li class="">
+            <a href="" class="active">
+              <span class="las la-home"></span>
+              <span>Dashboard</span>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <span class="las la-users"></span>
+              <span>Students</span>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <span class="las la-desktop"></span>
+              <span>Banners</span>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <span class="las la-clipboard-list"></span>
+              <span>Courses</span>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <span class="las la-clipboard-list"></span>
+              <span>Topics</span>
+            </a>
+          </li>
+          <li>
+            <a asp-controller="Home" asp-action="Index">
+              <span class="las la-chevron-left"></span>
+              <span>Back</span>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <span class="las la-sign-out-alt"></span>
+              <span>Logout</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <!-- End sidebar -->
+
+    <!-- Start main-conntent -->
+    <div class="main-content">
+      <!-- Header section -->
+      <header class="main-header">
+        <div class="main-header">
+          <h3>
+          <label for="nav-toggle">
+            <span class="las la-bars"></span>
+          </label>
+          Dashboard
+        </h3>
+
+        <div class="search-wrapper">
+          <span class="las la-search"> </span>
+          <input type="search" placeholder="Search here" />
+        </div>
+
+        <div class="user-wrapper">
+          <img src="~/img/imageDesktop.jpg" width="40px" height="40px" alt="" />
+          <div>
+            <h4>SMD Team 1</h4>
+            <small>Super admin</small>
+          </div>
+        </div>
+        </div>
+      </header>
+      <!-- End header -->
+
+      <!-- Main section -->
+      <main>
+        <!-- Cards section -->
+        <div class="cards">
+          <div class="card-single">
+            <div>
+              <h1>54</h1>
+              <span>Students</span>
+            </div>
+            <div>
+              <span class="las la-users"></span>
+            </div>
+          </div>
+          <div class="card-single">
+            <div>
+              <h1>20</h1>
+              <span>Instructor</span>
+            </div>
+            <div>
+              <span class="las la-users"></span>
+            </div>
+          </div>
+          <div class="card-single">
+            <div>
+              <h1>65</h1>
+              <span>Courses</span>
+            </div>
+            <div>
+              <span class="las la-clipboard-list"></span>
+            </div>
+          </div>
+          <div class="card-single">
+            <div>
+              <h1>12</h1>
+              <span>Payments</span>
+            </div>
+            <div>
+              <span class="lab la-cc-paypal"></span>
+            </div>
+          </div>
+        </div>
+        <!-- Cards section -->
+
+        <!-- Table section -->
+        <div class="recent-grid">
+          <div class="courses">
+            <div class="card">
+              <div class="card-header">
+                <h3>Courses</h3>
+                <button>
+                  See all <span class="las la-arrow-right"></span>
+                </button>
+              </div>
+              <div class="card-body">
+                <table width="100%">
+                  <thead>
+                    <tr>
+                      <td>#</td>
+                      <td>Title</td>
+                      <td>Topic</td>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>1</td>
+                      <td>Developer</td>
+                      <td>Learn</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+
+          <div class="users">
+             <div class="card">
+              <div class="card-header">
+                <h3>Students</h3>
+                <button>
+                  See all <span class="las la-arrow-right"></span>
+                </button>
+              </div>
+              <div class="card-body">
+                <div class="student">
+                  <div class="info">
+                    <img src="~/img/imageDesktop.jpg" width="40px" height="40px" alt="">
+                    <div>
+                      <h4>Nguyen Anh Dung</h4>
+                      <small>Leader</small>
+                    </div>
+                  </div>     
+                   <div class="contact">
+                      <span class="las la-user-circle"></span>
+                      <span class="las la-comment"></span>
+                      <span class="las la-phone"></span>
+                    </div>
+                </div>
+                <div class="student">
+                  <div class="info">
+                    <img src="~/img/imageDesktop.jpg" width="40px" height="40px" alt="">
+                    <div>
+                      <h4>Nguyen Anh Dung</h4>
+                      <small>Leader</small>
+                    </div>
+                  </div>     
+                   <div class="contact">
+                      <span class="las la-user-circle"></span>
+                      <span class="las la-comment"></span>
+                      <span class="las la-phone"></span>
+                    </div>
+                </div>
+                <div class="student">
+                  <div class="info">
+                    <img src="~/img/imageDesktop.jpg" width="40px" height="40px" alt="">
+                    <div>
+                      <h4>Nguyen Anh Dung</h4>
+                      <small>Leader</small>
+                    </div>
+                  </div>     
+                   <div class="contact">
+                      <span class="las la-user-circle"></span>
+                      <span class="las la-comment"></span>
+                      <span class="las la-phone"></span>
+                    </div>
+                </div>
+              </div>  
+          </div>
+        </div>
+        <!-- Table section -->
+      </main>
+      <!-- End main -->
+    </div>
+    <!-- End main-conntent -->
+  </body>
+</html>
+
