--- a/BookShop/Areas/Identity/Pages/Account/Register.cshtml
+++ b/BookShop/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,66 +1,71 @@
 ﻿@page
 @model RegisterModel
 @{
-    ViewData["Title"] = "Register";
+	ViewData["Title"] = "Register";
 }
 
-<h1>@ViewData["Title"]</h1>
+<div class="container mt-5">
+	<h1>@ViewData["Title"]</h1>
 
-<div class="row">
-    <div class="col-md-4">
-        <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h2>Create a new account.</h2>
-            <hr />
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="mb-3 form-floating">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
-                <label asp-for="Input.Email"></label>
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
-            <div class="mb-3 form-floating">
-                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
-                <label asp-for="Input.Password"></label>
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
-            </div>
-            <div class="mb-3 form-floating">
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
-                <label asp-for="Input.ConfirmPassword"></label>
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-            </div>
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
-        </form>
-    </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h3>Use another service to register.</h3>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div class="row row-cols-2">
-                        <div class="col me-3 w-75">
-                            <button id="" type="submit" class="w-50 btn btn-lg btn-primary">FaceBook</button>
-                        </div>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
-        </section>
-    </div>
+	<div class="row pt-4">
+		<div class="col-md-4">
+			<form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+				<h2>Create a new account.</h2>
+				<hr />
+				<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+				<div class="mb-3 form-floating">
+					<input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
+					<label asp-for="Input.Email"></label>
+					<span asp-validation-for="Input.Email" class="text-danger"></span>
+				</div>
+				<div class="mb-3 form-floating">
+					<input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
+					<label asp-for="Input.Password"></label>
+					<span asp-validation-for="Input.Password" class="text-danger"></span>
+				</div>
+				<div class="mb-3 form-floating">
+					<input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
+					<label asp-for="Input.ConfirmPassword"></label>
+					<span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+				</div>
+				<button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
+			</form>
+			<p class="mt-4">
+				<a asp-page="./Login" asp-route-returnUrl="@Model.ReturnUrl">Already have an account</a>
+			</p>
+		</div>
+		<div class="col-md-6 col-md-offset-2">
+			<section>
+				<h3>Use another service to register.</h3>
+				<hr />
+				@{
+					if ((Model.ExternalLogins?.Count ?? 0) == 0)
+					{
+						<div class="row row-cols-2">
+							<div class="col me-3 w-75">
+								<button id="" type="submit" class="w-50 btn btn-lg btn-primary">FaceBook</button>
+							</div>
+						</div>
+					}
+					else
+					{
+						<form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+							<div>
+								<p>
+									@foreach (var provider in Model.ExternalLogins)
+									{
+										<button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+									}
+								</p>
+							</div>
+						</form>
+					}
+				}
+			</section>
+		</div>
+	</div>
+
+	@section Scripts {
+	<partial name="_ValidationScriptsPartial" />
+	}
 </div>
-
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
