--- a/BookShop/Views/Book/Create.cshtml
+++ b/BookShop/Views/Book/Create.cshtml
@@ -68,8 +68,8 @@
                 <span asp-validation-for=" Desc" class="text-danger"></span>
             </div>
             <div class="input-group mb-3">
-                <input asp-for="ImgUrl" name = "image" type="file" class="form-control" id="inputGroupFile02">
-                <label asp-for="ImgUrl" class="input-group-text" for="inputGroupFile02">Upload</label>
+                <input name = "image" type="file" class="form-control" id="inputGroupFile02">
+                <label class="input-group-text" for="inputGroupFile02">Upload</label>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
