--- a/BookShop/Views/Book/Details.cshtml
+++ b/BookShop/Views/Book/Details.cshtml
@@ -50,13 +50,17 @@
             @Html.DisplayNameFor(model => model.ImgUrl)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ImgUrl)
+              
+                 <div> 
+                     <img src = "~/img/@Model.ImgUrl"  asp-append-version = "true"  style= "max-width :60px"> 
+                 </div>
+         
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Store)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Store.Id)
+            @Model.Store.Name
         </dd>
     </dl>
 </div>
