--- a/BookShop/Views/Book/Index.cshtml
+++ b/BookShop/Views/Book/Index.cshtml
@@ -4,11 +4,25 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Create Book</a>
 </p>
+
+<p>
+    <a asp-action="RecordOrder">Record Order</a>
+</p>
+
+    <form asp-action="Index" method="get">
+    <div class="form-actions ">
+        <p>
+            Find by name: <input  type="text" name="SearchString" value="@ViewData["CurrentFilter"]" />
+            <input type="submit" value="Search" class="btn btn-primary" /> |
+            <a asp-action="Index">Back to Full List</a>
+        </p>
+    </div>
+</form>
+
 <table class="table">
     <thead>
         <tr>
@@ -88,3 +102,26 @@
 }
     </tbody>
 </table>
+
+<nav aria-label="...">
+  <ul class="pagination justify-content-center">
+    <li class="page-item">
+      <a class="page-link" href="/Students/Index/@ViewBag.idpagprev" aria-label="Previous">
+        <span aria-hidden="true">&laquo;</span>
+      </a>
+    </li>
+    @for (var i = 0; i < ViewBag.NumberOfPages ; i++)
+    {       var style = (ViewBag.currentPage == @i) ? "active" : "";
+            <li class="page-item @style " aria-current="page"  >
+                <a asp-action="Index" asp-route-id="@(i)" asp-route-SearchString="@ViewData["CurrentFilter"]" class="page-link" >@(i +1 ) </a>
+                </li>
+
+    }
+
+    <li class="page-item">
+      <a class="page-link" href="/Students/Index/@ViewBag.idpagenext" aria-label="Next">
+        <span aria-hidden="true">&raquo;</span>
+      </a>
+    </li>
+  </ul>
+</nav>
