Add role for store controller

--- a/BookShop/Views/Store/Index.cshtml
+++ b/BookShop/Views/Store/Index.cshtml
@@ -26,6 +26,11 @@
   </head>
   <body>
 
+    @*<p>
+        @ViewBag.message
+    </p>*@
+
+
     <input type="checkbox" name="" id="nav-toggle">
     <!-- Start sidebar -->
     <div class="sidebar">
