--- a/BookShop/Areas/Identity/Pages/Account/Register.cshtml
+++ b/BookShop/Areas/Identity/Pages/Account/Register.cshtml
@@ -18,6 +18,12 @@
 					<label asp-for="Input.Email"></label>
 					<span asp-validation-for="Input.Email" class="text-danger"></span>
 				</div>
+
+				<div class="form-floating mb-3">
+					<select asp-for="Input.Role" asp-items="Model.Roles" class="form-control"></select>
+					<label asp-for="Input.Role"></label>
+				</div>
+
 				<div class="mb-3 form-floating">
 					<input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
 					<label asp-for="Input.Password"></label>
