--- a/BookShop/Views/Book/Create.cshtml
+++ b/BookShop/Views/Book/Create.cshtml
@@ -1,8 +1,5 @@
 ﻿@model BookShop.Models.Book
 
-@{
-    ViewData["Title"] = "Create";
-}
 
 <h1>Create</h1>
 
@@ -17,10 +14,8 @@
                 <input asp-for="Isbn" class="form-control" />
                 <span asp-validation-for="Isbn" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="StoreId" class="control-label"></label>
-                <select asp-for=" StoreId" class="form-control" asp-items="ViewBag.StoreId"></select>
-            </div>
+          
+      
             <div class="form-group">
                 <label asp-for=" Title" class="control-label"></label>
                 <input asp-for=" Title" class="form-control" />
@@ -34,7 +29,7 @@
             <div class="form-group">
                 <label asp-for=" Author" class="control-label"></label>
                 <input asp-for=" Author" class="form-control" />
-                <span asp-validation-for=" Author" class="text-danger"></span>
+                <span  asp-validation-for=" Author" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Category" class="control-label"></label>
@@ -70,6 +65,10 @@
             <div class="input-group mb-3">
                 <input  name = "image" type="file" class="form-control" id="inputGroupFile02">
                 <label class="input-group-text" for="inputGroupFile02">Upload</label>
+            </div>
+              <div class="form-group">
+                <label asp-for="Store" class="control-label"></label>
+                <p>@ViewBag.StoreId</p>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
