--- a/BookShop/Views/Book/Search.cshtml
+++ b/BookShop/Views/Book/Search.cshtml
@@ -18,16 +18,16 @@
 			<div class="col card mb-2 ms-5 w-75" style="width: 50%;">
 				<div class="g-0 d-flex flex-row">
 					<div class="col-3 align-items-center" style="width: 100%;">
-						<img src="https://product.hstatic.net/200000343865/product/57_3_3970c042906743279a6cf272e2193d41_master.jpg" class="img-thumbnail w-75" style="width: 100%!important; height:35vh!important;" alt="...">
+						<img src="@("~/img/" + item.ImgUrl)" asp-append-version = "true" class="img-thumbnail w-75" style="width: 100%!important; height:35vh!important;" alt="...">
 					</div>
 					<div class="col-9">
 						<div class="card-body fs-3">
 							<h3 class="card-title fs-2 text-dark">@Html.DisplayFor(modelItem => item.Title)</h3>
-							<h5 class="card-title fs-3 text-dark">Book author</h5>
+							<h5 class="card-title fs-3 text-dark">@Html.DisplayFor(modelItem => item.Author)</h5>
 							<p class="card-text text-dark" style="text-align: justify;">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-							<p class="card-text text-dark">Store: Name Store</p>
+							<p class="card-text text-dark"> @Html.DisplayFor(modelItem => item.Store.Id)</p>
 							<div class="d-flex justify-content-between">
-								<p class="card-text text-dark"><small class="text-muted">Price: 300</small></p>
+								<p class="card-text text-dark"><small class="text-muted">Price: @Html.DisplayFor(modelItem => item.Price)</small></p>
 								<div class="stars me-3">
 									<i class="fas fa-star" style="color: #F5BA3D;"></i>
 									<i class="fas fa-star" style="color: #F5BA3D;"></i>
