--- a/BookShop/Views/Book/Index.cshtml
+++ b/BookShop/Views/Book/Index.cshtml
@@ -2,8 +2,8 @@
 
 @{
     ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_LayoutSeller.cshtml";
 }
-
 
 <p>
     <a asp-action="Create" >Create Book</a>
