--- a/BookShop/Views/Shared/_LayoutUser.cshtml
+++ b/BookShop/Views/Shared/_LayoutUser.cshtml
@@ -68,13 +68,14 @@
 	<div class="header-2">
 		<nav class="navbar-1">
 			<a href="#home">home</a>
+			@*<a asp-controller="Book" asp-action="DisplayBook">Books</a>*@
 			<a href="#featured">featured</a>
 			<a href="#arrivals">arrivals</a>
 			<a href="#reviews">reviews</a>
 			<a asp-controller="Home" asp-action="Search">helps</a>
-			@if (User.IsInRole("seller"))
+			@if (User.IsInRole("Seller"))
 			{
-				<a asp-area="" asp-controller="Store" asp-action="ForSellerOnly">Store</a>
+				<a asp-area="" asp-controller="Book" asp-action="Index">Store</a>
 			}
 			else
 			{
