--- a/BookShop/Views/Home/Index.cshtml
+++ b/BookShop/Views/Home/Index.cshtml
@@ -396,7 +396,7 @@
 
 <!-- blogs section ends -->
 <!-- footer section starts  -->
-
+@*
 <div class="product-detail">
 	<div class="product-items">
 		<div class="product-img">
@@ -413,5 +413,5 @@
 	</div>
 
 </div>
-</div>
+</div>*@
 
