--- a/BookShop/Views/Cart/Index.cshtml
+++ b/BookShop/Views/Cart/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<BookShop.Models.Cart>
+@Html.Raw(TempData["msg"]);
 
 @{
     ViewData["Title"] = "Users Page";
@@ -23,7 +24,6 @@
     else
     {
         <div class="container mt-5 border border-dark w-100 p-3">
-            <form enctype="multipart/form-data" asp-controller="Order" asp-action="Checkout" method="post">
                 <table class="table table-hover fs-3 aligns-items-center justify-content-center">
                     <thead>
                         <tr>
@@ -35,10 +35,8 @@
                         </tr>
                     </thead>
                     <tbody class="aligns-items-center justify-content-center">
-
                         @foreach (var item in Model)
                         {
-
                             <tr>
 
                                 <td class="text-center align-middle">@item.Book.Title</td>
@@ -47,10 +45,10 @@
                                 </td>
                                 <td class="text-center align-middle" style="width: 10%;">
                                     <div class="col-sm">
-                                        <input type="number" name="@item.BookIsbn" value="2" class="fs-3 form-control text-center">
+                                        <input type="number" name="@item.BookIsbn" value="@item.Quantity" class="fs-3 form-control text-center">
                                     </div>
                                 </td>
-                                <td class="text-center align-middle">$ @item.Book.Price </td>
+                                <td class="text-center align-middle">$ @(item.Book.Price * item.Quantity) </td>
                                 <td class="text-center align-middle">
                                     <a asp-action= "Remove" asp-route-Isbn = "@item.BookIsbn" class="btn btn-danger p-3 fs-3 fa-solid fa-trash-can"></a>
                                 </td>
@@ -59,9 +57,8 @@
                     </tbody>
                 </table>
                 <div class="d-flex flex-row-reverse" style="margin-right: 4%;">
-                    <a class="btn btn-success p-3 fs-3">Checkout</a>
+                    <a  asp-controller="Order" asp-action="index" class="btn btn-success p-3 fs-3">Checkout</a>
                 </div>
-            </form>
         </div>
     }
 
