--- a/BookShop/wwwroot/css/style.css
+++ b/BookShop/wwwroot/css/style.css
@@ -850,10 +850,11 @@ section {
 }
 .input-group1 {
     display: inline-block;
-    padding: 0;
+    padding: 4px;
     border: 1px solid rgb(181, 176, 176);
     color: #95d7fc;
     border-radius: 5px;
+    z-index:99999;
 }
 
 .btn-input {
