--- a/BookShop/Views/Book/BookDetails.cshtml
+++ b/BookShop/Views/Book/BookDetails.cshtml
@@ -9,7 +9,7 @@
 	<div class="card mb-3 mt-3 align-items-center justify-content-center" style="width: 86%; margin-left: 6%;">
 		<div class="row g-0">
 			<div class="col-md-4">
-				<img src="https://product.hstatic.net/200000343865/product/57_3_3970c042906743279a6cf272e2193d41_master.jpg" class="img-fluid rounded-start" alt="...">
+				<img style="width: 300rem; hight: 500rem;" src="~/img/@Model.ImgUrl" class="img-fluid rounded-start" alt="...">
 			</div>
 			<div class="col-md-8">
 				<div class="card-body fs-3">
