--- a/BookShop/Views/Order/Index.cshtml
+++ b/BookShop/Views/Order/Index.cshtml
@@ -1,47 +1,42 @@
-﻿@model IEnumerable<BookShop.Models.Order>
+﻿@model IEnumerable<BookShop.Models.Cart>
 
 @{
     ViewData["Title"] = "Index";
 }
-
+@ViewData["Total"]
 <h1>Index</h1>
 
-<p>
-    <a asp-action="Checkout">Payment</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.OrderDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Total)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.User)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.OrderDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Total)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.User.Id)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div class="container mt-5 border border-dark w-100 p-3">
+                <table class="table table-hover fs-3 aligns-items-center justify-content-center">
+                    <thead>
+                        <tr>
+                            <th scope="col" class="text-center">Title</th>
+                            <th scope="col" class="text-center">Image</th>
+                            <th scope="col" class="text-center">Quantity</th>
+                            <th scope="col" class="text-center">Price</th>
+                        </tr>
+                    </thead>
+                    <tbody class="aligns-items-center justify-content-center">
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+
+                                <td class="text-center align-middle">@item.Book.Title</td>
+                                <td class="text-center align-middle" style="width: 28%;">
+                                    <img src="~/img/@item.Book.ImgUrl" class="img-thumbnail w-25" alt="...">
+                                </td>
+                                <td class="text-center align-middle" style="width: 10%;">
+                                    <div class="col-sm">
+                                        <input type="number" name="@item.BookIsbn" value="@item.Quantity" class="fs-3 form-control text-center">
+                                    </div>
+                                </td>
+                                <td class="text-center align-middle">$ @(item.Book.Price * item.Quantity) </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+                <div class="d-flex flex-row-reverse" style="margin-right: 4%;">
+                    <a  asp-controller="Order" asp-action="Checkout" asp-route-total = "@ViewData["Total"]" class="btn btn-success p-3 fs-3">Checkout</a>
+                </div>
+        </div>
+    
