--- a/BookShop/Views/Book/RecordOrder.cshtml
+++ b/BookShop/Views/Book/RecordOrder.cshtml
@@ -2,13 +2,13 @@
 
 @{
     ViewData["Title"] = "RecordOrder";
+    Layout = "~/Views/Shared/_LayoutSeller.cshtml";
 }
 
 <h1>RecordOrder</h1>
 <table class="table">
   <thead>
     <tr>
-      <th scope="col">#</th>
       <th scope="col">User</th>
       <th scope="col">Order Date</th>
       <th scope="col">Details</th>
@@ -16,7 +16,6 @@
   </thead>
   <tbody>
     <tr>
-      <th scope="row">1</th>
       <td>Mark</td>
       <td>Otto</td>
       <td> <a asp-action="Details" asp-route-id=" ">Details</a> </td>
