--- a/BookShop/Views/Shared/_LayoutSeller.cshtml
+++ b/BookShop/Views/Shared/_LayoutSeller.cshtml
@@ -36,15 +36,15 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a asp-controller="Book" asp-action="Create" >
               <span class="las la-clipboard-list"></span>
-              <span>Record Order</span>
+              <span>Create Book</span>
             </a>
           </li>
-          <li>
-            <a href="">
+             <li>
+            <a asp-controller="Book" asp-action="RecordOrder">
               <span class="las la-clipboard-list"></span>
-              <span>Books</span>
+              <span>Record Order</span>
             </a>
           </li>
           <li>
@@ -75,8 +75,10 @@
         </h3>
 
         <div class="search-wrapper">
-          <span class="las la-search"> </span>
-          <input type="search" placeholder="Search here" />
+          <form asp-controller="Book" asp-action="Index" method="get">
+			<input type="search" name="SearchString" value="@ViewData["CurrentFilter"]" placeholder="Search here..."  >
+			<input type="submit" value="Search" class="submit-search">
+		</form>
         </div>
 
         <div class="user-wrapper">
@@ -98,5 +100,10 @@
       </main>
       <!-- End main -->
     </div>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+        @await RenderSectionAsync("Scripts", required: false)
+
 </body>
 </html>
