--- a/BookShop/Views/Book/Edit.cshtml
+++ b/BookShop/Views/Book/Edit.cshtml
@@ -2,9 +2,8 @@
 
 @{
     ViewData["Title"] = "Edit";
+    Layout = "~/Views/Shared/_LayoutSeller.cshtml";
 }
-
-<h1>Edit Book</h1>
 <hr />
 <div class="row">
     <div class="col-md-4" >
