--- a/BookShop/Views/Home/Index.cshtml
+++ b/BookShop/Views/Home/Index.cshtml
@@ -11,6 +11,7 @@
 	ViewData["Title"] = "Users Page";
 	Layout = "~/Views/Shared/_LayoutUser.cshtml";
 }
+@Html.Raw(TempData["msg"])
 
 <!-- header section starts  -->
 
