--- a/BookShop/Views/Book/Index.cshtml
+++ b/BookShop/Views/Book/Index.cshtml
@@ -62,9 +62,12 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Price)
             </td> 
-            <td>
+            <div class = "product-description">
+             <td>
                 @Html.DisplayFor(modelItem => item.Desc)
             </td>
+            </div>
+       
             <td>
                 @Html.DisplayFor(modelItem => item.ImgUrl)
             </td>
