--- a/BookShop/Views/Book/Create.cshtml
+++ b/BookShop/Views/Book/Create.cshtml
@@ -1,10 +1,11 @@
 ﻿@model BookShop.Models.Book
-@Html.Raw(TempData["msg"])
 
 @{
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_LayoutSeller.cshtml";
 }
+@Html.Raw(TempData["msg"])
+
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -15,8 +16,6 @@
                 <input asp-for="Isbn" class="form-control" />
                 <span asp-validation-for="Isbn" class="text-danger"></span>
             </div>
-          
-      
             <div class="form-group">
                 <label asp-for=" Title" class="control-label"></label>
                 <input asp-for=" Title" class="form-control" />
@@ -64,8 +63,7 @@
                 <span asp-validation-for=" Desc" class="text-danger"></span>
             </div>
             <div class="input-group mb-3">
-                <input  name = "image" type="file" class="form-control" id="inputGroupFile02">
-                <label class="input-group-text" for="inputGroupFile02">Upload</label>
+                <input asp-for="ImgUrl"  name = "image" type="file" class="form-control" id="inputGroupFile02">
             </div>
               <div class="form-group">
                 <label asp-for="Store" class="control-label"></label>
@@ -78,9 +76,6 @@
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{
