--- a/BookShop/wwwroot/css/store.css
+++ b/BookShop/wwwroot/css/store.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
+﻿@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
 
 :root {
     --main-color: #2f32dd;
@@ -356,6 +356,16 @@ td {
         }
 }
 
+.product-description {
+    display: block;
+    display: -webkit-box;
+    font-size: 16px;
+    line-height: 1.3;
+    -webkit-line-clamp: 2; /* số dòng hiển thị */
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 @media only screen and (max-width: 960px) {
     .cards {
         grid-template-columns: repeat(3, 1fr);
