--- a/BookShop/wwwroot/css/style.css
+++ b/BookShop/wwwroot/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600&display=swap');
+﻿@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600&display=swap');
 @import url("https://fonts.googleapis.com/css2?family=Exo&display=swap");
 
 :root {
@@ -820,6 +820,18 @@ section {
     margin-right: 10px;
     font-size: 20px;
     color: black;
+}
+
+.product-description {
+    display: block;
+    display: -webkit-box;
+    font-size: 16px;
+    line-height: 1.3;
+    -webkit-line-clamp: 2; /* số dòng hiển thị */
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin-top: 10px;
 }
 
 .product-quantity .title-bold {
