--- a/BookShop/Views/Shared/_LayoutSeller.cshtml
+++ b/BookShop/Views/Shared/_LayoutSeller.cshtml
@@ -16,6 +16,7 @@
           crossorigin="anonymous" />
     <link rel="stylesheet"
           href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="~/css/store.css" />
 </head>
 <body>
@@ -41,7 +42,7 @@
                     </a>
                 </li>
                 <li>
-                    <a asp-controller="Order" asp-action="RecordOrder">
+                    <a asp-controller="Orders" asp-action="Index">
                         <span class="las la-clipboard-list"></span>
                         <span>Record Order</span>
                     </a>
@@ -97,9 +98,11 @@
         </main>
         <!-- End main -->
     </div>
-     <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-        @await RenderSectionAsync("Scripts", required: false)
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
